--- a/conf/dev-conf.yaml
+++ b/conf/dev-conf.yaml
@@ -1,7 +1,7 @@
-postgresSource: "host=localhost port=5432 user=pgsql dbname=profile sslmode=disable password=testPassword"
-pgMigrationSource: "postgres://pgsql:testPassword@localhost:5432/profile?sslmode=disable&search_path=public"
+postgresSource: "host=localhost port=5432 user=myuser dbname=profile sslmode=disable password=mypass"
+pgMigrationSource: "postgres://myuser:mypass@localhost:5432/profile?sslmode=disable&search_path=public"
 serverPort: ":9000"
 
 redis:
-  host: 192.168.88.108
+  host: 127.0.0.1
   port: 6379
